--- a/owlindex.html
+++ b/owlindex.html
@@ -24,7 +24,7 @@
                 </div>
         </div>
     </div>
-    <div class="main_top">
+    <section class="main">  
         <div class="main_top_left">
             <div class="main_top_textbox">
                 <h1>
@@ -45,30 +45,20 @@
                     written for leading design <br>
                     publications, and co-published<br>
                     a book about design systems.<br>
-    
                 </p>
             </div>
         </div>
         <div class="main_top_right">
-
         </div>
-    </div>
-    <div class="main_mid">
-
-    </div>
-    <div class="main_row">
-
-    </div>
-    <div class="links">
+        <div class="main_mid">
+        </div>
+        <div class="main_row">
+        </div>
         <div class="links_left">
-
         </div>
         <div class="links_right">
-
         </div>
-    </div>
-    <div class="footer">
-
-    </div>
+        <div class="footer"></div>
+    </section>  
 </body>
 </html>
